# serializer version: 1
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-event-hamming]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 0.6667 ┆ 1.0    ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.25   ┆ 0.7143 │
  │ 2   ┆ 0.6667 ┆ 0.0    ┆ 1.0    ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.75   ┆ 0.5    │
  │ 3   ┆ 1.0    ┆ 1.0    ┆ 0.0    ┆ … ┆ 0.6667 ┆ 0.3333 ┆ 1.0    ┆ 0.8333 │
  │ 4   ┆ 0.5    ┆ 0.5    ┆ 1.0    ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.5    ┆ 1.0    │
  │ 5   ┆ 0.5    ┆ 0.25   ┆ 0.75   ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.75   ┆ 0.5    │
  │ 6   ┆ 0.6667 ┆ 1.0    ┆ 0.3333 ┆ … ┆ 0.6667 ┆ 0.3333 ┆ 0.6667 ┆ 0.6667 │
  │ 7   ┆ 1.0    ┆ 1.0    ┆ 0.6667 ┆ … ┆ 0.0    ┆ 0.6667 ┆ 1.0    ┆ 1.0    │
  │ 8   ┆ 1.0    ┆ 0.6667 ┆ 0.3333 ┆ … ┆ 0.6667 ┆ 0.0    ┆ 1.0    ┆ 1.0    │
  │ 9   ┆ 0.25   ┆ 0.75   ┆ 1.0    ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.0    ┆ 0.75   │
  │ 10  ┆ 0.7143 ┆ 0.5    ┆ 0.8333 ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.75   ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-event-l2entity]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 1.0828 ┆ 1.1169 ┆ … ┆ 1.5159 ┆ 0.9398 ┆ 0.7558 ┆ 0.5092 │
  │ 2   ┆ 1.0828 ┆ 0.0    ┆ 1.0509 ┆ … ┆ 1.1755 ┆ 0.3532 ┆ 1.2073 ┆ 1.0071 │
  │ 3   ┆ 1.1169 ┆ 1.0509 ┆ 0.0    ┆ … ┆ 0.857  ┆ 0.4965 ┆ 0.6905 ┆ 0.9985 │
  │ 4   ┆ 1.1141 ┆ 0.852  ┆ 0.4063 ┆ … ┆ 0.8037 ┆ 0.6776 ┆ 0.5483 ┆ 0.8473 │
  │ 5   ┆ 1.6553 ┆ 0.6761 ┆ 0.8477 ┆ … ┆ 0.5382 ┆ 0.9337 ┆ 1.4723 ┆ 1.5847 │
  │ 6   ┆ 1.0606 ┆ 1.3564 ┆ 1.1297 ┆ … ┆ 0.5461 ┆ 1.031  ┆ 0.85   ┆ 1.3799 │
  │ 7   ┆ 1.5159 ┆ 1.1755 ┆ 0.857  ┆ … ┆ 0.0    ┆ 0.9789 ┆ 0.8507 ┆ 1.5089 │
  │ 8   ┆ 0.9398 ┆ 0.3532 ┆ 0.4965 ┆ … ┆ 0.9789 ┆ 0.0    ┆ 0.9534 ┆ 1.4753 │
  │ 9   ┆ 0.7558 ┆ 1.2073 ┆ 0.6905 ┆ … ┆ 0.8507 ┆ 0.9534 ┆ 0.0    ┆ 0.5676 │
  │ 10  ┆ 0.5092 ┆ 1.0071 ┆ 0.9985 ┆ … ┆ 1.5089 ┆ 1.4753 ┆ 0.5676 ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-interval-hamming]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 0.6667 ┆ 1.0    ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.25   ┆ 0.7143 │
  │ 2   ┆ 0.6667 ┆ 0.0    ┆ 1.0    ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.75   ┆ 0.5    │
  │ 3   ┆ 1.0    ┆ 1.0    ┆ 0.0    ┆ … ┆ 0.6667 ┆ 0.3333 ┆ 1.0    ┆ 0.8333 │
  │ 4   ┆ 0.5    ┆ 0.5    ┆ 1.0    ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.5    ┆ 1.0    │
  │ 5   ┆ 0.5    ┆ 0.25   ┆ 0.75   ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.75   ┆ 0.5    │
  │ 6   ┆ 0.6667 ┆ 1.0    ┆ 0.3333 ┆ … ┆ 0.6667 ┆ 0.3333 ┆ 0.6667 ┆ 0.6667 │
  │ 7   ┆ 1.0    ┆ 1.0    ┆ 0.6667 ┆ … ┆ 0.0    ┆ 0.6667 ┆ 1.0    ┆ 1.0    │
  │ 8   ┆ 1.0    ┆ 0.6667 ┆ 0.3333 ┆ … ┆ 0.6667 ┆ 0.0    ┆ 1.0    ┆ 1.0    │
  │ 9   ┆ 0.25   ┆ 0.75   ┆ 1.0    ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.0    ┆ 0.75   │
  │ 10  ┆ 0.7143 ┆ 0.5    ┆ 0.8333 ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.75   ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-interval-l2entity]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 1.0828 ┆ 1.1169 ┆ … ┆ 1.5159 ┆ 0.9398 ┆ 0.7558 ┆ 0.5092 │
  │ 2   ┆ 1.0828 ┆ 0.0    ┆ 1.0509 ┆ … ┆ 1.1755 ┆ 0.3532 ┆ 1.2073 ┆ 1.0071 │
  │ 3   ┆ 1.1169 ┆ 1.0509 ┆ 0.0    ┆ … ┆ 0.857  ┆ 0.4965 ┆ 0.6905 ┆ 0.9985 │
  │ 4   ┆ 1.1141 ┆ 0.852  ┆ 0.4063 ┆ … ┆ 0.8037 ┆ 0.6776 ┆ 0.5483 ┆ 0.8473 │
  │ 5   ┆ 1.6553 ┆ 0.6761 ┆ 0.8477 ┆ … ┆ 0.5382 ┆ 0.9337 ┆ 1.4723 ┆ 1.5847 │
  │ 6   ┆ 1.0606 ┆ 1.3564 ┆ 1.1297 ┆ … ┆ 0.5461 ┆ 1.031  ┆ 0.85   ┆ 1.3799 │
  │ 7   ┆ 1.5159 ┆ 1.1755 ┆ 0.857  ┆ … ┆ 0.0    ┆ 0.9789 ┆ 0.8507 ┆ 1.5089 │
  │ 8   ┆ 0.9398 ┆ 0.3532 ┆ 0.4965 ┆ … ┆ 0.9789 ┆ 0.0    ┆ 0.9534 ┆ 1.4753 │
  │ 9   ┆ 0.7558 ┆ 1.2073 ┆ 0.6905 ┆ … ┆ 0.8507 ┆ 0.9534 ┆ 0.0    ┆ 0.5676 │
  │ 10  ┆ 0.5092 ┆ 1.0071 ┆ 0.9985 ┆ … ┆ 1.5089 ┆ 1.4753 ┆ 0.5676 ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-state-hamming]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 0.6667 ┆ 1.0    ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.25   ┆ 0.7143 │
  │ 2   ┆ 0.6667 ┆ 0.0    ┆ 1.0    ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.75   ┆ 0.5    │
  │ 3   ┆ 1.0    ┆ 1.0    ┆ 0.0    ┆ … ┆ 0.6667 ┆ 0.3333 ┆ 1.0    ┆ 0.8333 │
  │ 4   ┆ 0.5    ┆ 0.5    ┆ 1.0    ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.5    ┆ 1.0    │
  │ 5   ┆ 0.5    ┆ 0.25   ┆ 0.75   ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.75   ┆ 0.5    │
  │ 6   ┆ 0.6667 ┆ 1.0    ┆ 0.3333 ┆ … ┆ 0.6667 ┆ 0.3333 ┆ 0.6667 ┆ 0.6667 │
  │ 7   ┆ 1.0    ┆ 1.0    ┆ 0.6667 ┆ … ┆ 0.0    ┆ 0.6667 ┆ 1.0    ┆ 1.0    │
  │ 8   ┆ 1.0    ┆ 0.6667 ┆ 0.3333 ┆ … ┆ 0.6667 ┆ 0.0    ┆ 1.0    ┆ 1.0    │
  │ 9   ┆ 0.25   ┆ 0.75   ┆ 1.0    ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.0    ┆ 0.75   │
  │ 10  ┆ 0.7143 ┆ 0.5    ┆ 0.8333 ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.75   ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-state-l2entity]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 1.0828 ┆ 1.1169 ┆ … ┆ 1.5159 ┆ 0.9398 ┆ 0.7558 ┆ 0.5092 │
  │ 2   ┆ 1.0828 ┆ 0.0    ┆ 1.0509 ┆ … ┆ 1.1755 ┆ 0.3532 ┆ 1.2073 ┆ 1.0071 │
  │ 3   ┆ 1.1169 ┆ 1.0509 ┆ 0.0    ┆ … ┆ 0.857  ┆ 0.4965 ┆ 0.6905 ┆ 0.9985 │
  │ 4   ┆ 1.1141 ┆ 0.852  ┆ 0.4063 ┆ … ┆ 0.8037 ┆ 0.6776 ┆ 0.5483 ┆ 0.8473 │
  │ 5   ┆ 1.6553 ┆ 0.6761 ┆ 0.8477 ┆ … ┆ 0.5382 ┆ 0.9337 ┆ 1.4723 ┆ 1.5847 │
  │ 6   ┆ 1.0606 ┆ 1.3564 ┆ 1.1297 ┆ … ┆ 0.5461 ┆ 1.031  ┆ 0.85   ┆ 1.3799 │
  │ 7   ┆ 1.5159 ┆ 1.1755 ┆ 0.857  ┆ … ┆ 0.0    ┆ 0.9789 ┆ 0.8507 ┆ 1.5089 │
  │ 8   ┆ 0.9398 ┆ 0.3532 ┆ 0.4965 ┆ … ┆ 0.9789 ┆ 0.0    ┆ 0.9534 ┆ 1.4753 │
  │ 9   ┆ 0.7558 ┆ 1.2073 ┆ 0.6905 ┆ … ┆ 0.8507 ┆ 0.9534 ┆ 0.0    ┆ 0.5676 │
  │ 10  ┆ 0.5092 ┆ 1.0071 ┆ 0.9985 ┆ … ┆ 1.5089 ┆ 1.4753 ┆ 0.5676 ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-event-hamming]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 0.8333 ┆ 0.8333 ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.75   ┆ 0.7143 │
  │ 2   ┆ 0.8333 ┆ 0.0    ┆ 0.8333 ┆ … ┆ 0.6667 ┆ 0.6667 ┆ 0.5    ┆ 0.6667 │
  │ 3   ┆ 0.8333 ┆ 0.8333 ┆ 0.0    ┆ … ┆ 1.0    ┆ 0.6667 ┆ 1.0    ┆ 1.0    │
  │ 4   ┆ 0.75   ┆ 0.75   ┆ 0.5    ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.75   ┆ 1.0    │
  │ 5   ┆ 0.5    ┆ 1.0    ┆ 0.5    ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.75   ┆ 0.75   │
  │ 6   ┆ 0.3333 ┆ 1.0    ┆ 0.3333 ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.6667 ┆ 0.6667 │
  │ 7   ┆ 1.0    ┆ 0.6667 ┆ 1.0    ┆ … ┆ 0.0    ┆ 0.3333 ┆ 0.6667 ┆ 1.0    │
  │ 8   ┆ 0.6667 ┆ 0.6667 ┆ 0.6667 ┆ … ┆ 0.3333 ┆ 0.0    ┆ 0.6667 ┆ 1.0    │
  │ 9   ┆ 0.75   ┆ 0.5    ┆ 1.0    ┆ … ┆ 0.6667 ┆ 0.6667 ┆ 0.0    ┆ 0.75   │
  │ 10  ┆ 0.7143 ┆ 0.6667 ┆ 1.0    ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.75   ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-event-l2entity]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 0.7496 ┆ 1.1786 ┆ … ┆ 0.8328 ┆ 0.6362 ┆ 1.0657 ┆ 1.1026 │
  │ 2   ┆ 0.7496 ┆ 0.0    ┆ 1.5415 ┆ … ┆ 1.3183 ┆ 0.9455 ┆ 0.7221 ┆ 0.7269 │
  │ 3   ┆ 1.1786 ┆ 1.5415 ┆ 0.0    ┆ … ┆ 0.6447 ┆ 1.2005 ┆ 1.1045 ┆ 1.5178 │
  │ 4   ┆ 0.9735 ┆ 1.0455 ┆ 0.8481 ┆ … ┆ 0.2847 ┆ 1.0782 ┆ 1.1382 ┆ 0.9799 │
  │ 5   ┆ 0.4465 ┆ 0.8134 ┆ 1.171  ┆ … ┆ 1.0342 ┆ 0.8731 ┆ 0.872  ┆ 0.76   │
  │ 6   ┆ 0.5254 ┆ 0.0665 ┆ 1.8414 ┆ … ┆ 1.4198 ┆ 0.875  ┆ 0.815  ┆ 0.063  │
  │ 7   ┆ 0.8328 ┆ 1.3183 ┆ 0.6447 ┆ … ┆ 0.0    ┆ 1.2092 ┆ 1.6408 ┆ 1.5275 │
  │ 8   ┆ 0.6362 ┆ 0.9455 ┆ 1.2005 ┆ … ┆ 1.2092 ┆ 0.0    ┆ 0.9666 ┆ 0.8348 │
  │ 9   ┆ 1.0657 ┆ 0.7221 ┆ 1.1045 ┆ … ┆ 1.6408 ┆ 0.9666 ┆ 0.0    ┆ 0.6431 │
  │ 10  ┆ 1.1026 ┆ 0.7269 ┆ 1.5178 ┆ … ┆ 1.5275 ┆ 0.8348 ┆ 0.6431 ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-interval-hamming]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 0.8333 ┆ 0.8333 ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.75   ┆ 0.7143 │
  │ 2   ┆ 0.8333 ┆ 0.0    ┆ 0.8333 ┆ … ┆ 0.6667 ┆ 0.6667 ┆ 0.5    ┆ 0.6667 │
  │ 3   ┆ 0.8333 ┆ 0.8333 ┆ 0.0    ┆ … ┆ 1.0    ┆ 0.6667 ┆ 1.0    ┆ 1.0    │
  │ 4   ┆ 0.75   ┆ 0.75   ┆ 0.5    ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.75   ┆ 1.0    │
  │ 5   ┆ 0.5    ┆ 1.0    ┆ 0.5    ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.75   ┆ 0.75   │
  │ 6   ┆ 0.3333 ┆ 1.0    ┆ 0.3333 ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.6667 ┆ 0.6667 │
  │ 7   ┆ 1.0    ┆ 0.6667 ┆ 1.0    ┆ … ┆ 0.0    ┆ 0.3333 ┆ 0.6667 ┆ 1.0    │
  │ 8   ┆ 0.6667 ┆ 0.6667 ┆ 0.6667 ┆ … ┆ 0.3333 ┆ 0.0    ┆ 0.6667 ┆ 1.0    │
  │ 9   ┆ 0.75   ┆ 0.5    ┆ 1.0    ┆ … ┆ 0.6667 ┆ 0.6667 ┆ 0.0    ┆ 0.75   │
  │ 10  ┆ 0.7143 ┆ 0.6667 ┆ 1.0    ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.75   ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-interval-l2entity]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 0.7496 ┆ 1.1786 ┆ … ┆ 0.8328 ┆ 0.6362 ┆ 1.0657 ┆ 1.1026 │
  │ 2   ┆ 0.7496 ┆ 0.0    ┆ 1.5415 ┆ … ┆ 1.3183 ┆ 0.9455 ┆ 0.7221 ┆ 0.7269 │
  │ 3   ┆ 1.1786 ┆ 1.5415 ┆ 0.0    ┆ … ┆ 0.6447 ┆ 1.2005 ┆ 1.1045 ┆ 1.5178 │
  │ 4   ┆ 0.9735 ┆ 1.0455 ┆ 0.8481 ┆ … ┆ 0.2847 ┆ 1.0782 ┆ 1.1382 ┆ 0.9799 │
  │ 5   ┆ 0.4465 ┆ 0.8134 ┆ 1.171  ┆ … ┆ 1.0342 ┆ 0.8731 ┆ 0.872  ┆ 0.76   │
  │ 6   ┆ 0.5254 ┆ 0.0665 ┆ 1.8414 ┆ … ┆ 1.4198 ┆ 0.875  ┆ 0.815  ┆ 0.063  │
  │ 7   ┆ 0.8328 ┆ 1.3183 ┆ 0.6447 ┆ … ┆ 0.0    ┆ 1.2092 ┆ 1.6408 ┆ 1.5275 │
  │ 8   ┆ 0.6362 ┆ 0.9455 ┆ 1.2005 ┆ … ┆ 1.2092 ┆ 0.0    ┆ 0.9666 ┆ 0.8348 │
  │ 9   ┆ 1.0657 ┆ 0.7221 ┆ 1.1045 ┆ … ┆ 1.6408 ┆ 0.9666 ┆ 0.0    ┆ 0.6431 │
  │ 10  ┆ 1.1026 ┆ 0.7269 ┆ 1.5178 ┆ … ┆ 1.5275 ┆ 0.8348 ┆ 0.6431 ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-state-hamming]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 0.8333 ┆ 0.8333 ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.75   ┆ 0.7143 │
  │ 2   ┆ 0.8333 ┆ 0.0    ┆ 0.8333 ┆ … ┆ 0.6667 ┆ 0.6667 ┆ 0.5    ┆ 0.6667 │
  │ 3   ┆ 0.8333 ┆ 0.8333 ┆ 0.0    ┆ … ┆ 1.0    ┆ 0.6667 ┆ 1.0    ┆ 1.0    │
  │ 4   ┆ 0.75   ┆ 0.75   ┆ 0.5    ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.75   ┆ 1.0    │
  │ 5   ┆ 0.5    ┆ 1.0    ┆ 0.5    ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.75   ┆ 0.75   │
  │ 6   ┆ 0.3333 ┆ 1.0    ┆ 0.3333 ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.6667 ┆ 0.6667 │
  │ 7   ┆ 1.0    ┆ 0.6667 ┆ 1.0    ┆ … ┆ 0.0    ┆ 0.3333 ┆ 0.6667 ┆ 1.0    │
  │ 8   ┆ 0.6667 ┆ 0.6667 ┆ 0.6667 ┆ … ┆ 0.3333 ┆ 0.0    ┆ 0.6667 ┆ 1.0    │
  │ 9   ┆ 0.75   ┆ 0.5    ┆ 1.0    ┆ … ┆ 0.6667 ┆ 0.6667 ┆ 0.0    ┆ 0.75   │
  │ 10  ┆ 0.7143 ┆ 0.6667 ┆ 1.0    ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.75   ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-state-l2entity]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 0.7496 ┆ 1.1786 ┆ … ┆ 0.8328 ┆ 0.6362 ┆ 1.0657 ┆ 1.1026 │
  │ 2   ┆ 0.7496 ┆ 0.0    ┆ 1.5415 ┆ … ┆ 1.3183 ┆ 0.9455 ┆ 0.7221 ┆ 0.7269 │
  │ 3   ┆ 1.1786 ┆ 1.5415 ┆ 0.0    ┆ … ┆ 0.6447 ┆ 1.2005 ┆ 1.1045 ┆ 1.5178 │
  │ 4   ┆ 0.9735 ┆ 1.0455 ┆ 0.8481 ┆ … ┆ 0.2847 ┆ 1.0782 ┆ 1.1382 ┆ 0.9799 │
  │ 5   ┆ 0.4465 ┆ 0.8134 ┆ 1.171  ┆ … ┆ 1.0342 ┆ 0.8731 ┆ 0.872  ┆ 0.76   │
  │ 6   ┆ 0.5254 ┆ 0.0665 ┆ 1.8414 ┆ … ┆ 1.4198 ┆ 0.875  ┆ 0.815  ┆ 0.063  │
  │ 7   ┆ 0.8328 ┆ 1.3183 ┆ 0.6447 ┆ … ┆ 0.0    ┆ 1.2092 ┆ 1.6408 ┆ 1.5275 │
  │ 8   ┆ 0.6362 ┆ 0.9455 ┆ 1.2005 ┆ … ┆ 1.2092 ┆ 0.0    ┆ 0.9666 ┆ 0.8348 │
  │ 9   ┆ 1.0657 ┆ 0.7221 ┆ 1.1045 ┆ … ┆ 1.6408 ┆ 0.9666 ┆ 0.0    ┆ 0.6431 │
  │ 10  ┆ 1.1026 ┆ 0.7269 ┆ 1.5178 ┆ … ┆ 1.5275 ┆ 0.8348 ┆ 0.6431 ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[event-hamming]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬───────┬───────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1 ┆ seq_2 │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---   ┆ ---   │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32   ┆ f32   │
  ╞═════════╪═════════╪═════════╪═════════╪═══════╪═══════╡
  │ empty_1 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ empty_2 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ empty_3 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ seq_1   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 0.0   ┆ 0.5   │
  │ seq_2   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 0.5   ┆ 0.0   │
  └─────────┴─────────┴─────────┴─────────┴───────┴───────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[event-l2entity]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬────────┬────────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1  ┆ seq_2  │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---    ┆ ---    │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32    ┆ f32    │
  ╞═════════╪═════════╪═════════╪═════════╪════════╪════════╡
  │ empty_1 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN    ┆ NaN    │
  │ empty_2 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN    ┆ NaN    │
  │ empty_3 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN    ┆ NaN    │
  │ seq_1   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 0.0    ┆ 1.9229 │
  │ seq_2   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 1.9229 ┆ 0.0    │
  └─────────┴─────────┴─────────┴─────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[interval-hamming]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬───────┬───────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1 ┆ seq_2 │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---   ┆ ---   │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32   ┆ f32   │
  ╞═════════╪═════════╪═════════╪═════════╪═══════╪═══════╡
  │ empty_1 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ empty_2 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ empty_3 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ seq_1   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 0.0   ┆ 0.5   │
  │ seq_2   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 0.5   ┆ 0.0   │
  └─────────┴─────────┴─────────┴─────────┴───────┴───────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[interval-l2entity]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬────────┬────────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1  ┆ seq_2  │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---    ┆ ---    │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32    ┆ f32    │
  ╞═════════╪═════════╪═════════╪═════════╪════════╪════════╡
  │ empty_1 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN    ┆ NaN    │
  │ empty_2 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN    ┆ NaN    │
  │ empty_3 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN    ┆ NaN    │
  │ seq_1   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 0.0    ┆ 1.9229 │
  │ seq_2   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 1.9229 ┆ 0.0    │
  └─────────┴─────────┴─────────┴─────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[state-hamming]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬───────┬───────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1 ┆ seq_2 │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---   ┆ ---   │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32   ┆ f32   │
  ╞═════════╪═════════╪═════════╪═════════╪═══════╪═══════╡
  │ empty_1 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ empty_2 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ empty_3 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ seq_1   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 0.0   ┆ 0.5   │
  │ seq_2   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 0.5   ┆ 0.0   │
  └─────────┴─────────┴─────────┴─────────┴───────┴───────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[state-l2entity]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬────────┬────────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1  ┆ seq_2  │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---    ┆ ---    │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32    ┆ f32    │
  ╞═════════╪═════════╪═════════╪═════════╪════════╪════════╡
  │ empty_1 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN    ┆ NaN    │
  │ empty_2 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN    ┆ NaN    │
  │ empty_3 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN    ┆ NaN    │
  │ seq_1   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 0.0    ┆ 1.9229 │
  │ seq_2   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 1.9229 ┆ 0.0    │
  └─────────┴─────────┴─────────┴─────────┴────────┴────────┘
# ---
# name: TestConfigRoundtrip.test_to_config_snapshot
  dict({
    'settings': dict({
      'agg_fun': 'sum',
      'entity_metric': dict({
        'settings': dict({
          'cost': None,
          'entity_feature': None,
          'mismatch_cost': 1.0,
        }),
        'type': 'hamming',
      }),
      'padding_penalty': 0.5,
    }),
    'type': 'linearpairwise',
  })
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-event-hamming]
  0.6667
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-event-l2entity]
  1.0828
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-interval-hamming]
  0.6667
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-interval-l2entity]
  1.0828
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-state-hamming]
  0.6667
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-state-l2entity]
  1.0828
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-event-hamming]
  0.8333
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-event-l2entity]
  0.7496
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-interval-hamming]
  0.8333
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-interval-l2entity]
  0.7496
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-state-hamming]
  0.8333
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-state-l2entity]
  0.7496
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-event-hamming]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-event-l2entity]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-interval-hamming]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-interval-l2entity]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-state-hamming]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-state-l2entity]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-event-hamming]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-event-l2entity]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-interval-hamming]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-interval-l2entity]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-state-hamming]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-state-l2entity]
  0.0
# ---
